--- a/literature/literature.bib
+++ b/literature/literature.bib
@@ -1,6 +1,15 @@
 % This file was created with JabRef 2.10.
 % Encoding: UTF8
 
+@book{Arora:2009:CCM:1540612,
+ author = {Arora, Sanjeev and Barak, Boaz},
+ title = {Computational Complexity: A Modern Approach},
+ year = {2009},
+ isbn = {0521424267, 9780521424264},
+ edition = {1st},
+ publisher = {Cambridge University Press},
+ address = {New York, NY, USA},
+} 
 
 @InProceedings{Lohmann2009,
   Title                    = {A Web Platform for Social Requirements Engineering},
